Fixed button spacing for mobile

--- a/src/components/_homepage/testimonials.module.scss
+++ b/src/components/_homepage/testimonials.module.scss
@@ -129,7 +129,10 @@
   .controlWrap {
     display: flex;
     width: 100%;
-    gap: 15px;
+    gap: 10px;
+    @media (min-width: $desktop) {
+      gap: 15px;
+    }
   }
 
   .quoteControls {
